--- a/res/values-eo/strings.xml
+++ b/res/values-eo/strings.xml
@@ -76,6 +76,15 @@
   <!--CameraActivity-->
   <string name="CameraActivity_image_save_failure">Eraro dum konservo de bildo.</string>
   <!--CameraContacts-->
+  <string name="CameraContacts_recent_contacts">Lastaj kontaktoj</string>
+  <string name="CameraContacts_signal_contacts">Signal-kontaktoj</string>
+  <string name="CameraContacts_signal_groups">Signal-grupoj</string>
+  <string name="CameraContacts_you_can_share_with_a_maximum_of_n_conversations">Vi povas kunhavigi kun maksimume %d  interparoloj.</string>
+  <string name="CameraContacts_select_signal_recipients">Elekti Signal-ricevontojn</string>
+  <string name="CameraContacts_no_signal_contacts">Neniu Signal-kontakto</string>
+  <string name="CameraContacts_you_can_only_use_the_camera_button">La fotilo-butono uzeblas nur por sendi fotojn al Signal-kontaktoj.</string>
+  <string name="CameraContacts_cant_find_who_youre_looking_for">Ĉu vi ne trovas, kion vi serĉas?</string>
+  <string name="CameraContacts_invite_a_contact_to_join_signal">Inviti kontakton uzi Signal-on</string>
   <!--ClearProfileActivity-->
   <string name="ClearProfileActivity_remove">Forviŝi</string>
   <string name="ClearProfileActivity_remove_profile_photo">Ĉu forviŝi profilan foton?</string>
@@ -409,6 +418,9 @@
   <string name="MediaSendActivity_an_item_was_removed_because_it_exceeded_the_size_limit">Elemento estis forigita, ĉar ĝi transpasis la grandlimon.</string>
   <string name="MediaSendActivity_camera_unavailable">Fotilo ne disponeblas.</string>
   <string name="MediaSendActivity_message_to_s">Mesaĝo al %s</string>
+  <string name="MediaSendActivity_message">Mesaĝo</string>
+  <string name="MediaSendActivity_select_recipients">Elekti ricevontojn</string>
+  <string name="MediaSendActivity_signal_needs_access_to_your_contacts">Signal bezonas aliri viajn kontaktojn por montri ilin.</string>
   <plurals name="MediaSendActivity_cant_share_more_than_n_items">
     <item quantity="one">Vi ne povas kunhavigi pli ol %d elementon.</item>
     <item quantity="other">Vi ne povas kunhavigi pli ol %d elementojn.</item>
