--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -414,6 +414,7 @@
   <string name="MediaSendActivity_message_to_s">پیام به %s </string>
   <string name="MediaSendActivity_message">پیام</string>
   <string name="MediaSendActivity_select_recipients">گیرندگان را انتخاب کنید</string>
+  <string name="MediaSendActivity_signal_needs_access_to_your_contacts">Signal نیاز دارد تا مخاطبان شما را ببیند تا آن ها را نمایش دهد.</string>
   <plurals name="MediaSendActivity_cant_share_more_than_n_items">
     <item quantity="one">شما نمی توانید بیش از %d آیتم را به اشتراک بگذارید.</item>
     <item quantity="other">شما نمی توانید بیش از %d آیتم را به اشتراک بگذارید.</item>
