--- a/res/values-gl/strings.xml
+++ b/res/values-gl/strings.xml
@@ -410,6 +410,7 @@
   <string name="MediaSendActivity_camera_unavailable">Cámara non dispoñible.</string>
   <string name="MediaSendActivity_message_to_s">Mensaxe para %s</string>
   <string name="MediaSendActivity_message">Mensaxe</string>
+  <string name="MediaSendActivity_signal_needs_access_to_your_contacts">Signal necesita acceder aos teus contactos para poder mostralos.</string>
   <plurals name="MediaSendActivity_cant_share_more_than_n_items">
     <item quantity="one">Non podes compartir máis de %d elemento.</item>
     <item quantity="other">Non podes compartir máis de %d elementos.</item>
