--- a/res/values-hr/strings.xml
+++ b/res/values-hr/strings.xml
@@ -428,6 +428,7 @@
   <string name="MediaSendActivity_camera_unavailable">Kamera nije dostupna</string>
   <string name="MediaSendActivity_message_to_s">Poruka za %s</string>
   <string name="MediaSendActivity_message">Poruka</string>
+  <string name="MediaSendActivity_signal_needs_access_to_your_contacts">Signal zahtjeva pristup vašim kontaktima kako bi ih mogao prikazati.</string>
   <plurals name="MediaSendActivity_cant_share_more_than_n_items">
     <item quantity="one">Ne možete dijeliti više od %dstavke.</item>
     <item quantity="few">Ne možete dijeliti više od %d stavki.</item>
