--- a/res/values-ku/strings.xml
+++ b/res/values-ku/strings.xml
@@ -395,6 +395,7 @@
   <string name="MediaSendActivity_an_item_was_removed_because_it_exceeded_the_size_limit">Tiştek hat rakirin ji ber ku zêde mezin bû</string>
   <string name="MediaSendActivity_camera_unavailable">Kamera nayê bikar anîn.</string>
   <string name="MediaSendActivity_message_to_s">Peyam ji bo %s</string>
+  <string name="MediaSendActivity_signal_needs_access_to_your_contacts">Signal ji bo wan nîşan bide destûra gihiştina berdengan dixwaze.</string>
   <!--MediaRepository-->
   <string name="MediaRepository_all_media">Hemû medya</string>
   <!--MessageRecord-->
