--- a/res/values-nb/strings.xml
+++ b/res/values-nb/strings.xml
@@ -410,6 +410,7 @@
   <string name="MediaSendActivity_camera_unavailable">Kamera utilgjengelig.</string>
   <string name="MediaSendActivity_message_to_s">Melding til %s</string>
   <string name="MediaSendActivity_message">Melding</string>
+  <string name="MediaSendActivity_signal_needs_access_to_your_contacts">Signal må ha tilgang til kontaktene dine for å kunne vise dem.</string>
   <plurals name="MediaSendActivity_cant_share_more_than_n_items">
     <item quantity="one">Du kan ikke dele mer enn %d fil.</item>
     <item quantity="other">Du kan ikke dele mer enn %d filer.</item>
