--- a/res/values-nn/strings.xml
+++ b/res/values-nn/strings.xml
@@ -403,6 +403,7 @@
   <string name="MediaSendActivity_add_a_caption">Legg til bildetekst …</string>
   <string name="MediaSendActivity_an_item_was_removed_because_it_exceeded_the_size_limit">Eit element vart fjerna fordi det gjekk over storleiksgrensa</string>
   <string name="MediaSendActivity_camera_unavailable">Kamera utilgjengeleg.</string>
+  <string name="MediaSendActivity_signal_needs_access_to_your_contacts">Signal treng tilgang til kontaktane dine for å visa dei.</string>
   <!--MediaRepository-->
   <string name="MediaRepository_all_media">All media</string>
   <!--MessageRecord-->
