--- a/res/values-pt-rBR/strings.xml
+++ b/res/values-pt-rBR/strings.xml
@@ -61,6 +61,7 @@
   <string name="AttachmentManager_signal_requires_location_information_in_order_to_attach_a_location">O Signal precisa da permissão Localização para anexar uma localização, mas ela foi permanentemente negada. Favor ir no menu de configurações de aplicativos, selecionar \"Permissões\", e habilitar \"Localização\".</string>
   <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">O Signal precisa da permissão Câmera para tirar fotos, mas ela foi permanentemente negada. Favor ir no menu de configurações de aplicativos, selecionar \"Permissões\", e habilitar \"Câmera\".</string>
   <!--AttachmentUploadJob-->
+  <string name="AttachmentUploadJob_uploading_media">Enviando mídia…</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Erro ao tocar áudio!</string>
   <!--BlockedContactsActivity-->
@@ -75,6 +76,15 @@
   <!--CameraActivity-->
   <string name="CameraActivity_image_save_failure">Falha ao salvar imagem.</string>
   <!--CameraContacts-->
+  <string name="CameraContacts_recent_contacts">Contatos recentes</string>
+  <string name="CameraContacts_signal_contacts">Contatos do Signal</string>
+  <string name="CameraContacts_signal_groups">Grupos do Signal</string>
+  <string name="CameraContacts_you_can_share_with_a_maximum_of_n_conversations">Você pode compartilhar com no máximo %d conversas.</string>
+  <string name="CameraContacts_select_signal_recipients">Selecionar destinatários no Signal</string>
+  <string name="CameraContacts_no_signal_contacts">Nenhum contato do Signal</string>
+  <string name="CameraContacts_you_can_only_use_the_camera_button">Você só pode usar o botão câmera para enviar fotos para contatos do Signal.</string>
+  <string name="CameraContacts_cant_find_who_youre_looking_for">Não achou quem você procurava?</string>
+  <string name="CameraContacts_invite_a_contact_to_join_signal">Convidar um contato para entrar no Signal</string>
   <!--ClearProfileActivity-->
   <string name="ClearProfileActivity_remove">Remover</string>
   <string name="ClearProfileActivity_remove_profile_photo">Remover foto do perfil?</string>
@@ -409,6 +419,8 @@
   <string name="MediaSendActivity_camera_unavailable">Câmera indisponível.</string>
   <string name="MediaSendActivity_message_to_s">Mensagem para %s</string>
   <string name="MediaSendActivity_message">Mensagem</string>
+  <string name="MediaSendActivity_select_recipients">Selecionar destinatários</string>
+  <string name="MediaSendActivity_signal_needs_access_to_your_contacts">O Signal precisa de acesso aos seus contatos para poder exibi-los.</string>
   <plurals name="MediaSendActivity_cant_share_more_than_n_items">
     <item quantity="one">Você não pode compartilhar mais de %d item.</item>
     <item quantity="other">Você não pode compartilhar mais de %d itens.</item>
@@ -471,6 +483,10 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">Enviar frase-chave</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Frase-chave inválida!</string>
   <!--PlacePickerActivity-->
+  <string name="PlacePickerActivity_title">Mapa</string>
+  <string name="PlacePickerActivity_not_a_valid_address">Endereço não é válido</string>
+  <string name="PlacePickerActivity_drop_pin">Soltar pin</string>
+  <string name="PlacePickerActivity_accept_address">Aceitar endereço</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">A versão instalada do Serviços Google Play não está funcionando corretamente. Favor reinstalar o Serviços Google Play e tentar novamente.</string>
   <!--RatingManager-->
@@ -548,6 +564,8 @@
   <string name="RegistrationActivity_enter_the_code_we_sent_to_s">Insira o código que enviamos para %s</string>
   <string name="RegistrationActivity_call">Ligar</string>
   <!--RevealableMessageView-->
+  <string name="RevealableMessageView_view_photo">Ver foto</string>
+  <string name="RevealableMessageView_viewed">Vista</string>
   <string name="RevealableMessageView_photo">Foto</string>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">Falha ao salvar alterações na imagem</string>
@@ -610,6 +628,7 @@
   <string name="ThreadRecord_missed_call">Ligação perdida</string>
   <string name="ThreadRecord_media_message">MMS</string>
   <string name="ThreadRecord_sticker">Figurinha</string>
+  <string name="ThreadRecord_disappearing_photo">Foto efêmera</string>
   <string name="ThreadRecord_s_is_on_signal">%s está no Signal!</string>
   <string name="ThreadRecord_disappearing_messages_disabled">Mensagens efêmeras desabilitadas</string>
   <string name="ThreadRecord_disappearing_message_time_updated_to_s">Expiração da mensagem efêmera definida para %s</string>
@@ -684,6 +703,7 @@
   <string name="MessageNotifier_mark_read">Marcar como lida</string>
   <string name="MessageNotifier_media_message">Mensagem multimídia</string>
   <string name="MessageNotifier_sticker">Figurinha</string>
+  <string name="MessageNotifier_disappearing_photo">Foto efêmera</string>
   <string name="MessageNotifier_reply">Responder</string>
   <string name="MessageNotifier_signal_message">Mensagem no Signal</string>
   <string name="MessageNotifier_unsecured_sms">SMS inseguro</string>
