--- a/res/values-sw/strings.xml
+++ b/res/values-sw/strings.xml
@@ -310,6 +310,7 @@
   <!--MediaSendActivity-->
   <string name="MediaSendActivity_add_a_caption">ongeza maelezo</string>
   <string name="MediaSendActivity_camera_unavailable">kamera haipatikani</string>
+  <string name="MediaSendActivity_signal_needs_access_to_your_contacts">Signal inahitaji upatikanaji wa anwani zako ili kuzionyesha.</string>
   <!--MediaRepository-->
   <string name="MediaRepository_all_media">Vyombo vyote vya habari</string>
   <!--MessageRecord-->
