--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -432,6 +432,7 @@
   <string name="MediaSendActivity_camera_unavailable">Камера не доступна</string>
   <string name="MediaSendActivity_message_to_s">Відправити до %s</string>
   <string name="MediaSendActivity_message">Повідомлення</string>
+  <string name="MediaSendActivity_signal_needs_access_to_your_contacts">Signal потребує дозволів \"Контакти\", щоб показати контакти.</string>
   <!--MediaRepository-->
   <string name="MediaRepository_all_media">Всі медіа-файли
 Всі зображення</string>
